[package]
name = "time-series-filter"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"

