[package]
name = "time-series-filter"
version = "0.1.2"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2021"
description = "Filters such as exponential weighted moving average (IIR LPF)"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/time-series-filter"
categories = [
    "science",
    "embedded",
    "no-std",
]
keywords = [
    "EWMA",
    "LPF",
    "IIR",
    "filter",
]
readme = "README.md"

[dependencies]
num-traits = { version = "0.2.17", default-features = false, features = ["libm"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"

